--- a/package.json
+++ b/package.json
@@ -1,51 +1,24 @@
 {
-  "name": "Tecnologies",
-  "version": "0.0.1",
-  "private": true,
-  "scripts": {
-    "apd": "npx react-native run-android && npx react-native start",
-    "android": "npx react-native run-android",
-    "ios": "npx react-native run-ios",
-    "lint": "eslint .",
-    "start": "npx react-native start",
-    "test": "jest"
-  },
-  "dependencies": {
-    "@react-navigation/native": "^6.1.6",
-    "@react-navigation/native-stack": "^6.9.12",
-    "@reduxjs/toolkit": "^1.9.3",
-    "axios": "^1.3.4",
-    "react": "18.2.0",
-    "react-native": "0.71.3",
-    "react-native-fs": "^2.20.0",
-    "react-native-html-to-pdf": "^0.12.0",
-    "react-native-image-picker": "^5.1.0",
-    "react-native-pdf": "^6.6.2",
-    "react-native-safe-area-context": "^4.5.0",
-    "react-native-screens": "^3.20.0",
-    "react-native-share": "^8.2.1",
-    "react-redux": "^8.0.5",
-    "redux": "^4.2.1",
-    "styled-components": "^5.3.8"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@babel/preset-env": "^7.20.0",
-    "@babel/runtime": "^7.20.0",
-    "@react-native-community/eslint-config": "^3.2.0",
-    "@tsconfig/react-native": "^2.0.2",
-    "@types/jest": "^29.2.1",
-    "@types/react": "^18.0.24",
-    "@types/react-test-renderer": "^18.0.0",
-    "babel-jest": "^29.2.1",
-    "eslint": "^8.19.0",
-    "jest": "^29.2.1",
-    "metro-react-native-babel-preset": "0.73.7",
-    "prettier": "^2.4.1",
-    "react-test-renderer": "18.2.0",
-    "typescript": "4.8.4"
-  },
-  "jest": {
-    "preset": "react-native"
+    "name": "@phelipe-bol/tecnologies",
+    "version": "0.0.1",
+    "description": "The basic template for tecnologies React Native Apps.",
+    "author": "Phelipe-Teixeira",
+    "homepage": "https://github.com/phelipe-bol/tecnologies",
+    "license": "MIT",
+    "bugs": {
+      "url": "https://github.com/phelipe-bol/tecnologies/issues"
+    },
+    "repository": {
+      "type": "git",
+      "url": "git@github.com:phelipe-bol/tecnologies.git"
+    },
+    "keywords": [
+      "react-native",
+      "template",
+      "react-native-template"
+    ],
+    "files": [
+      "template",
+      "template.config.js"
+    ]
   }
-}
