--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "estudoeTeste",
+  "name": "Tecnologies",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -16,7 +16,7 @@
     "@reduxjs/toolkit": "^1.9.3",
     "axios": "^1.3.4",
     "react": "18.2.0",
-    "react-native": "0.71.3",
+    "react-native": "^0.71.3",
     "react-native-fs": "^2.20.0",
     "react-native-html-to-pdf": "^0.12.0",
     "react-native-image-picker": "^5.1.0",
