--- a/template/package.json
+++ b/template/package.json
@@ -25,6 +25,7 @@
     "react-native-screens": "^3.20.0",
     "react-native-share": "^8.2.1",
     "react-native-vector-icons": "^9.2.0",
+    "realm": "^11.5.2",
     "react-redux": "^8.0.5",
     "redux": "^4.2.1",
     "styled-components": "^5.3.8"
