--- a/template/ios/Podfile
+++ b/template/ios/Podfile
@@ -43,7 +43,7 @@ target 'Tecnologies' do
     :app_path => "#{Pod::Config.instance.installation_root}/.."
   )
 
-  target 'tecnologiesTests' do
+  target 'TecnologiesTests' do
     inherit! :complete
     # Pods for testing
   end
