--- a/template/ios/easy_budgetsTeste.xcodeproj/xcshareddata/xcschemes/estudoeTeste.xcscheme
+++ b/template/ios/easy_budgetsTeste.xcodeproj/xcshareddata/xcschemes/estudoeTeste.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "tecnologies.app"
-               BlueprintName = "tecnologies"
-               ReferencedContainer = "container:tecnologies.xcodeproj">
+               BuildableName = "Tecnologies.app"
+               BlueprintName = "Tecnologies"
+               ReferencedContainer = "container:Tecnologies.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "tecnologiesTests.xctest"
-               BlueprintName = "tecnologiesTests"
-               ReferencedContainer = "container:tecnologies.xcodeproj">
+               BuildableName = "TecnologiesTests.xctest"
+               BlueprintName = "TecnologiesTests"
+               ReferencedContainer = "container:Tecnologies.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -55,9 +55,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "tecnologies.app"
-            BlueprintName = "tecnologies"
-            ReferencedContainer = "container:tecnologies.xcodeproj">
+            BuildableName = "Tecnologies.app"
+            BlueprintName = "Tecnologies"
+            ReferencedContainer = "container:Tecnologies.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -72,9 +72,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "tecnologies.app"
-            BlueprintName = "tecnologies"
-            ReferencedContainer = "container:tecnologies.xcodeproj">
+            BuildableName = "Tecnologies.app"
+            BlueprintName = "Tecnologies"
+            ReferencedContainer = "container:Tecnologies.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
