--- a/template/package.json
+++ b/template/package.json
@@ -8,7 +8,7 @@
     "ios": "npx react-native run-ios",
     "lint": "eslint .",
     "start": "npx react-native start",
-    "test": "jest"
+    "test": "jest --watchAll --detectOpenHandles"
   },
   "dependencies": {
     "@react-navigation/native": "^6.1.6",
@@ -25,8 +25,8 @@
     "react-native-screens": "^3.20.0",
     "react-native-share": "^8.2.1",
     "react-native-vector-icons": "^9.2.0",
-    "realm": "^11.5.2",
     "react-redux": "^8.0.5",
+    "realm": "^11.5.2",
     "redux": "^4.2.1",
     "styled-components": "^5.3.8"
   },
@@ -35,19 +35,25 @@
     "@babel/preset-env": "^7.20.0",
     "@babel/runtime": "^7.20.0",
     "@react-native-community/eslint-config": "^3.2.0",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/jest-native": "^5.4.2",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/react-native": "^12.0.0",
+    "@testing-library/user-event": "^14.4.3",
     "@tsconfig/react-native": "^2.0.2",
-    "@types/jest": "^29.2.1",
+    "@types/jest": "^29.5.0",
     "@types/react": "^18.0.24",
     "@types/react-test-renderer": "^18.0.0",
-    "babel-jest": "^29.2.1",
+    "babel-jest": "^29.5.0",
     "eslint": "^8.19.0",
-    "jest": "^29.2.1",
-    "metro-react-native-babel-preset": "0.73.7",
+    "jest": "^29.5.0",
+    "metro-react-native-babel-preset": "^0.73.7",
     "prettier": "^2.4.1",
-    "react-test-renderer": "18.2.0",
+    "react-native-testing-library": "^6.0.0",
+    "react-test-renderer": "^18.2.0",
+    "redux-mock-store": "^1.5.4",
+    "ts-jest": "^29.0.5",
+    "ts-node": "^10.9.1",
     "typescript": "4.8.4"
-  },
-  "jest": {
-    "preset": "react-native"
   }
 }
