--- a/template/package.json
+++ b/template/package.json
@@ -16,7 +16,7 @@
     "@reduxjs/toolkit": "^1.9.3",
     "axios": "^1.3.4",
     "react": "18.2.0",
-    "react-native": "0.71.3",
+    "react-native": "^0.71.10",
     "react-native-fs": "^2.20.0",
     "react-native-html-to-pdf": "^0.12.0",
     "react-native-image-picker": "^5.1.0",
